--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,6 @@
+@import './fonts/iconfont/iconfont.css';
 body{
+  min-width: 1440px;
   margin: 0;
   font-size: 14px;
   background: #F3F6FA;
@@ -35,7 +37,7 @@ ul, li {
   text-align: center;
   color: #999
 }
-input {
+input{
   padding: 0 10px;
   border: none;
   outline: none;
@@ -44,24 +46,42 @@ input {
 /* input:focus {
   outline: #1D78D3 auto 1px;
 } */
-::-webkit-input-placeholder {
+::-webkit-input-placeholder, ::-webkit-textarea-placeholder {
   font-size: 14px;
+  font-family: MicrosoftYaHei;
   color: #ccc
 }
 
 :-moz-placeholder {
   font-size: 14px;
+  font-family: MicrosoftYaHei;
   color: #ccc
 }
 
 ::-moz-placeholder {
   font-size: 14px;
+  font-family: MicrosoftYaHei;
   color: #ccc
 }
 
-:-ms-input-placeholder {
+:-ms-input-placeholder, :-ms-textarea-placeholder {
   font-size: 14px;
+  font-family: MicrosoftYaHei;
   color: #ccc
+}
+
+.el-input__inner, .el-textarea__inner {
+  border-radius: 0;
+}
+.el-textarea__inner {
+  border-color: #DCDEE2;
+  background: #F3F6FA
+}
+.el-date-editor.el-input {
+  width: 183px;
+}
+.el-textarea {
+  width: 500px
 }
 .pagetitle {
   margin: 24px 0;
@@ -75,7 +95,7 @@ input {
 }
 .pagetip {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   padding: 0 40px;
   box-shadow: 0px 3px 10px rgba(151,190,255,0.17);
   font-size: 12px;
@@ -87,8 +107,44 @@ input {
   font-weight: bold;
   color: #1D78D3;
 }
+.filters {
+  display: flex;
+  margin-bottom: 20px;
+}
+  
+.searchbox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 280px;
+  height: 40px;
+  padding-right: 10px;
+  margin-left: 20px;
+  border: 1px #e6e6e6 solid;
+}
+.searchbox input {
+  width: 260px;
+  height: 30px;
+}
+
+.searchbox i {
+  cursor: pointer;
+  color: #ccc;
+}
+
+.searchbox i:hover {
+  color: #1D78D3;
+}
+
+.paging {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
 .form {
   display: flex;
+  width: 100%;
   margin-bottom: 60px;
   box-shadow: 0px 3px 10px rgba(151,190,255,0.17);
   padding: 30px 50px;
@@ -105,9 +161,14 @@ input {
   margin-left: 40px
 }
 .formitem {
+  width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: 20px
+}
+.formitem.two > div {
+  display: flex;
+  align-items: center;
 }
 .formitem .itemname {
   width: 114px;
@@ -115,6 +176,9 @@ input {
   text-align: right;
   color: #666;
 }
+/* .formitem .itemname.second {
+  width: 80px;
+} */
 .formitem input {
   width: 420px;
   height: 40px;
@@ -124,6 +188,9 @@ input {
 .formitem input[disabled] {
   border: none;
   background: none;
+}
+.formitem.two input {
+  width: 183px !important;
 }
 .formitem.msgcode {
   position: relative
@@ -221,4 +288,171 @@ input {
 }
 .btns>div.submitbtn:hover {
   background: #50A7FF
+}
+.loginpage, .loginpage2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: url(../assets/img/loginbg.jpg) center no-repeat;
+  background-size: 100% 100%
+}
+.systemname {
+  font-size: 40px;
+  color: #fff
+}
+.loginpage2 {
+  background: url(../assets/img/loginbg2.jpg) center no-repeat
+}
+.loginpage2 .systemname {
+  color: #333
+}
+.loginbox {
+  display: flex;
+  width: 720px;
+  min-height: 480px;
+  margin-top: 80px;
+  box-shadow: 0px 0px 12px rgba(0,0,0,0.06)
+}
+.loginleft {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  border-radius: 10px 0 0 10px;
+  font-size: 24px;
+  background: url(../assets/img/loginleft.jpg) center no-repeat;
+  background-size: 100% 100%;
+  color: #fff
+}
+.loginright {
+  width: 440px;
+  padding: 30px 50px;
+  border-radius: 0 10px 10px 0;
+  background: #fff;
+  color: #999
+}
+.userstab {
+  font-size: 20px;
+  text-align: center;
+  line-height: 30px
+}
+.userstab span {
+  padding: 0 14px;
+  border-right: 1px #333 solid;
+  cursor: pointer
+}
+.userstab span:hover {
+  color: #666
+}
+.userstab span.userOn {
+  color: #333
+}
+.userstab span:last-of-type {
+  border: none
+}
+.typetab {
+  display: flex;
+  border-bottom: 1px #e6e6e6 solid;
+  margin: 30px 0 20px 0
+}
+.typetab span {
+  display: block;
+  padding: 5px 0;
+  margin-right: 40px;
+  cursor: pointer
+}
+.typetab span.typeOn {
+  border-bottom: 2px #1D78D3 solid;
+  color: #1D78D3
+}
+.typetab span:hover {
+  color: #666
+}
+.loginmain, .loginmain2 {
+  position: relative;
+  margin: 30px 0
+}
+.loginmain > div, .loginmain2 > div {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 44px;
+  border: 1px #e6e6e6 solid;
+  margin-bottom: 30px
+}
+.loginmain > div > div, .loginmain2 > div > div {
+  width: 44px;
+  height: 44px
+}
+.loginmain input, .loginmain2 input {
+  width: calc(100% - 44px);
+  height: 44px
+}
+.loginmain2 input {
+  width: 100%;
+}
+.loginmain2 input.msginput {
+  width: calc(100% - 100px)
+}
+div.loginbtn {
+  position: static;
+  display: block;
+  border: none;
+  border-radius: 24px;
+  margin-top: 40px;
+  text-align: center;
+  line-height: 44px;
+  background: #3972E4;
+  color: #fff;
+  cursor: pointer
+}
+div.loginbtn:hover {
+  background: #1D78D3
+}
+
+.sendbtn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px !important;
+  height: 44px;
+  text-align: center;
+  line-height: 44px;
+  background: #50A7FF;
+  color: #fff;
+  cursor: pointer
+}
+.sendbtn2 {
+  background: #999;
+  cursor: default;
+}
+.errtip {
+  position: absolute;
+  left: 0;
+  bottom: 54px;
+  color: red
+}
+.other {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 14px
+}
+.other span {
+  display: block;
+  padding: 0 8px;
+  border-right: 1px #1D78D3 solid;
+  cursor: pointer
+}
+.other span:last-of-type {
+  border: none;
+  color: #1D78D3
+}
+.other span:hover {
+  color: #1D78D3
 }
