chosed cant change and add tip

--- a/assets/main.css
+++ b/assets/main.css
@@ -785,7 +785,9 @@ div.loginbtn:hover {
   color: #50A7FF;
 }
 
-
+.againbtn {
+  color: #1D78D3;
+}
 .nodata {
   display: flex;
   flex-direction: column;
