--- a/assets/main.css
+++ b/assets/main.css
@@ -722,11 +722,15 @@ div.loginbtn:hover {
 .col1 {
   width: 5%;
 }
-.col2, .col4, .col5, .col6, .col7 {
+.col2, .col4, .col5, .col6 {
   width: 10%;
 }
-.col3, .col8, .col9 {
+.col3, .col9 {
   width: 15%;
+}
+
+.col3, .col7 {
+  width: 20%;
 }
 
 .col11 {
@@ -781,11 +785,11 @@ div.loginbtn:hover {
 }
 
 
-.col8 span, .col71 span, .col62 span, .col33 span {
+.col7 span, .col71 span, .col62 span, .col33 span {
   margin: 0 5px;
   cursor: pointer;
 }
-.col8 span:hover, .col71 span:hover, .col62 span:hover, .col33 span:hover {
+.col7 span:hover, .col71 span:hover, .col62 span:hover, .col33 span:hover {
   color: #50A7FF;
 }
 
